--- a/style.css
+++ b/style.css
@@ -1,44 +1,83 @@
 
-
-#site-name{
-    background-color:#14bb46f6;
-    height: 55px;
-    font-size: 45px;
+* {
+	margin: 0;
+	padding: 0;
 }
-#logo1{
+
+header {
+    background-color: #5CDB95;
+    height: 65px;
+    font-size: 40px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #05386B;
+}
+
+body, html {
+    height: 100%;
+    background-color: #EDF5E1;
+}
+
+footer {
+    background-color: #5CDB95;  
+    bottom: 100%;
+    width: 100%;
+
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+}
+
+#siteName{
+    position: absolute;
+    top: 1%;
+    left: 50%;
+    text-decoration: none;
+}
+#Main{
+    font-size: 28px;
+    position: absolute;
+    top: 1%;
+    left: 35%;
+    text-decoration: underline;
+}
+#Downloads{
+    font-size: 28px;
+    position: absolute;
+    top: 1%;
+    left: 65%;
+    text-decoration: none;
+}
+
+#ProgramLogo{
     position: absolute;
     top: 120px;
     left: 5px;
 }
-#projects{
-    position: absolute;
-    top: 70px;
-    font-size: 29px;
-    color: #1350d3;
-}
 
-#about_tp{
-    color: #1350d3;
+#aboutTP{
+    color: #05386B;
     position: absolute;
     font-size: 20px;
     top: 115px;
     left: 90px;
+    font-size: 22px;
 }
 #SDK6-0{
-    color: #1350d3;
+    color: #05386B;
     position: absolute;
     font-size: 20px;
     top: 190px;
     left: 90px;
 }
 #SDK5-0{
-    color: #1350d3;
+    color: #05386B;
     position: absolute;
     font-size: 20px;
     top: 210px;
     left: 90px;
 }#SDK3-1{
-    color: #1350d3;
+    color: #05386B;
     position: absolute;
     font-size: 20px;
     top: 230px;
@@ -51,26 +90,28 @@
     left: 25px;
 }
 
-#downloadtp{
-    background-color: #209b72f6;
-    color: #ffffff;
+#downloadTP{
+    background-color: #379683 ;
+    color: #EDF5E1;
     padding: 11px;
     margin: 5px;
     opacity: 0.9;  
     position: absolute;
     top: 260px;
     left: 85px;
+    text-decoration: none;
 }
 
-#old_vertp{
-    background-color: #209b72f6;
-    color: #ffffff;
+#informationTP{
+    background-color: #379683;
+    color: #EDF5E1;
     padding: 11px;
     margin: 5px;
     opacity: 0.9;
     position: absolute;
     top: 260px;
     left: 270px;
+    text-decoration: none;
 }
 #screen_ru_tp{
     position: absolute;
@@ -81,40 +122,6 @@
     position: absolute;
     top: 660px;
     left: 40px;
-}
-#logo2{
-    position: absolute;
-    top: 1010px;
-    left: 5px;
-}
-#about_fw{
-    color: #1350d3;
-    position: absolute;
-    font-size: 20px;
-    top: 1010px;
-    left: 90px;
-}
-#downloadfw{
-    background-color: #209b72f6;
-    color: #ffffff;
-    padding: 11px;
-    margin: 5px;
-    opacity: 0.9;  
-    position: absolute;
-    top: 1060px;
-    left: 85px;
-}
-#screenfwrus{
-    position: absolute;
-    top: 1140px;
-    width: 500px;
-    left: 40px;
-}
-#screenfwen{
-    position: absolute;
-    top: 1140px;
-    left: 580px;
-    width: 500px;
 }
 .minimized {
     width: 600px;
