--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+/* Основной стиль как для всей страницы, так и для отдельных крупных элементов */
 * {
 	margin: 0;
 	padding: 0;
@@ -8,7 +8,7 @@ header {
     background-color: #5CDB95;
     height: 65px;
     font-size: 40px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #05386B;
 }
 
@@ -28,82 +28,112 @@ footer {
     height: 80px;
 }
 
+/*Стили для всех тегов <a>*/
+a {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/*Стили только для тегов класса Button*/
+.Button{
+    background-color: #209b72f6;
+    color: #EDF5E1;
+    font-weight: 500;
+    padding: 11px;
+    margin: 5px;
+    opacity: 0.9;
+    text-decoration: none;
+}
+.Button:hover{
+    color: #e8fccb;
+}
+.Button:active{
+    color: #ffffff;
+}
+
+/*Стили для простых ссылок*/
+.link{
+    color: #05386B;
+}
+.link:hover{
+    color: #0e5caa;
+}
+.link:active{
+    color: #379683;
+}
+
+/* Стили для кнопок , расположенных в header'е */
+
 #siteName{
     position: absolute;
-    top: 1%;
+    top: 0.5%;
     left: 50%;
     text-decoration: none;
 }
 #Main{
     font-size: 28px;
     position: absolute;
-    top: 1%;
+    top: 1.5%;
     left: 35%;
     text-decoration: underline;
 }
 #Downloads{
     font-size: 28px;
     position: absolute;
-    top: 1%;
+    top: 1.5%;
     left: 65%;
     text-decoration: none;
 }
 
-#SDK6-0{
-    color: #05386B;
-    position: absolute;
-    font-size: 20px;
-    top: 190px;
-    left: 90px;
-}
-#SDK5-0{
-    color: #05386B;
-    position: absolute;
-    font-size: 20px;
-    top: 210px;
-    left: 90px;
-}#SDK3-1{
-    color: #05386B;
-    position: absolute;
-    font-size: 20px;
-    top: 230px;
-    left: 90px;
-}
+/* Стили основной страницы */
 
 #ProgramLogo{
     position: absolute;
-    top: 120px;
-    left: 5px;
+    top: 10%;
+    left: 1%;
 }
 #AboutTextPad{
+    position: absolute;
+    top: 9%;
+    left: 5%;
     color: #05386B;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 21px;
+}
+
+#GitHubSource{
+    position: absolute;
+    font-size: 21px;
+    top: 15%;
+    left: 67%;
+}
+
+#SDK6-0{
     position: absolute;
     font-size: 20px;
-    top: 115px;
-    left: 90px;
-    font-size: 22px;
+    top: 18.5%;
+    left: 5%;
 }
+#SDK5-0{
+    position: absolute;
+    font-size: 20px;
+    top: 21.5%;
+    left: 5%;
+}#SDK3-1{
+    position: absolute;
+    font-size: 20px;
+    top: 24.5%;
+    left: 5%;
+}
+
 #DownloadTextPad{
-    background-color: #379683 ;
-    color: #EDF5E1;
-    padding: 11px;
-    margin: 5px;
-    opacity: 0.9;  
     position: absolute;
     top: 260px;
-    left: 85px;
-    text-decoration: none;
+    left: 4.5%;
 }
 #AllDownloads{
-    background-color: #379683;
-    color: #EDF5E1;
-    padding: 11px;
-    margin: 5px;
-    opacity: 0.9;
     position: absolute;
     top: 260px;
-    left: 270px;
-    text-decoration: none;
+    left: 15%;
 }
 
 #ScreenTextPad1{
