--- a/style.css
+++ b/style.css
@@ -1,60 +1,68 @@
 /* Основной стиль как для всей страницы, так и для отдельных крупных элементов */
-* {
-	margin: 0;
-	padding: 0;
+
+*{
+    padding: 0;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
+    position: relative;
     background-color: #5CDB95;
-    height: 65px;
-    font-size: 40px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #05386B;
+    height: 65px;
+    width: 100%;
+    outline-style: solid;
+    outline-width: 2px;
+    outline-color: #05386B;
 }
 
-body, html {
-    height: 100%;
+body{
     background-color: #EDF5E1;
 }
 
 footer {
     background-color: #5CDB95;  
-    bottom: 100%;
-    width: 100%;
-
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 80px;
+    position: absolute;
+    margin-top: 910px;
+    height: 50px;
+    font-size: 17px;
+    width: 99%;
+    padding-left: 1%;
+    outline-style: solid;
+    outline-width: 2px;
+    outline-color: #05386B;
 }
 
-/*Стили для всех тегов <a>*/
-a {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-/*Стили только для тегов класса Button*/
+/*Стили класса Button*/
 .Button{
     background-color: #209b72f6;
     color: #EDF5E1;
     font-weight: 500;
     padding: 11px;
-    margin: 5px;
-    opacity: 0.9;
+    opacity: 0.95;
     text-decoration: none;
+    outline-style: solid;
+    outline-width: 0.5px;
+    transition: 0.3s;
+    outline-color: #05386B;
 }
 .Button:hover{
     color: #e8fccb;
+    outline-color: #5CDB95;
+    transition: 0.3s;
 }
 .Button:active{
     color: #ffffff;
 }
 
-/*Стили для простых ссылок*/
+/*Стили для класса ссылки*/
 .link{
+    transition: 0.3s;
     color: #05386B;
 }
 .link:hover{
+    transition: 0.3s;
     color: #0e5caa;
 }
 .link:active{
@@ -63,98 +71,109 @@ a {
 
 /* Стили для кнопок , расположенных в header'е */
 
-#siteName{
+#SiteName{
+    text-decoration: none;
     position: absolute;
-    top: 0.5%;
+    font-size: 40px;
     left: 50%;
-    text-decoration: none;
+    top: 18%;
 }
-#Main{
+#MainPage{
     font-size: 28px;
     position: absolute;
-    top: 1.5%;
-    left: 35%;
-    text-decoration: underline;
+    left: 25%;
+    top: 20%;
 }
-#Downloads{
+#DownloadsPage{
     font-size: 28px;
     position: absolute;
-    top: 1.5%;
-    left: 65%;
-    text-decoration: none;
+    left: 75%;
+    top: 20%;
 }
 
 /* Стили основной страницы */
 
+/*Стили для описания и логотипа*/
 #ProgramLogo{
     position: absolute;
-    top: 10%;
-    left: 1%;
+    margin-left: 30px;
+    margin-top: 30px;
+    box-shadow: 2px 2px 5px #888;
+    transition: 0.4s;
+}
+#ProgramLogo:hover{
+    transform: scale(1.07);
 }
 #AboutTextPad{
     position: absolute;
-    top: 9%;
-    left: 5%;
     color: #05386B;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 21px;
+    margin-left: 120px;
+    margin-top: 30px;
 }
 
+/*Стили для ссылок*/
 #GitHubSource{
     position: absolute;
     font-size: 21px;
-    top: 15%;
-    left: 73%;
+    margin-left: 30px;
+    margin-top: 125px;
 }
 
 #SDK6-0{
     position: absolute;
-    font-size: 20px;
-    top: 18.5%;
-    left: 5%;
+    font-size: 21px;
+    margin-left: 30px;
+    margin-top: 155px;
 }
 #SDK5-0{
     position: absolute;
-    font-size: 20px;
-    top: 21.5%;
-    left: 5%;
+    font-size: 21px;
+    margin-left: 30px;
+    margin-top: 185px;
 }#SDK3-1{
     position: absolute;
-    font-size: 20px;
-    top: 24.5%;
-    left: 5%;
+    font-size: 21px;
+    margin-left: 30px;
+    margin-top: 215px;
 }
 
+/*Стили для кнопок*/
 #DownloadTextPad{
     position: absolute;
-    top: 260px;
-    left: 4.5%;
+    margin-top: 250px;
+    margin-left: 30px;
+    box-shadow: 2px 2px 5px #888;
 }
 #AllDownloads{
     position: absolute;
-    top: 260px;
-    left: 15%;
+    margin-top: 250px;
+    margin-left: 235px;
+    box-shadow: 2px 2px 5px #888;
 }
 
+/*Стили для скринов*/
 #ScreenTextPad1{
     position: absolute;
-    top: 320px;
-    left: 40px;
+    margin-top: 300px;
+    margin-left: 30px;
+    box-shadow: 2px 2px 5px #888;
 }
 #ScreenTextPad2{
     position: absolute;
-    top: 660px;
-    left: 40px;
+    margin-top: 615px;
+    margin-left: 30px;
+    box-shadow: 2px 2px 5px #888;
 }
 
+/*Lightbox*/
 .minimized {
     width: 600px;
-    border: 1px solid #FFF;
 }
 .container img {
-    transition: 0.5s;
+    transition: 0.4s;
 }
 .container img:hover {
     border: 1px solid yellow;
-    transform: scale(1.1);
+    transform: scale(1.02);
 }
