--- a/style.css
+++ b/style.css
@@ -6,29 +6,16 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+body{
+    background-color: #EDF5E1;
+}
+
 header {
     position: relative;
     background-color: #5CDB95;
     color: #05386B;
     height: 65px;
     width: 100%;
-    outline-style: solid;
-    outline-width: 2px;
-    outline-color: #05386B;
-}
-
-body{
-    background-color: #EDF5E1;
-}
-
-footer {
-    background-color: #5CDB95;  
-    position: absolute;
-    margin-top: 910px;
-    height: 50px;
-    font-size: 17px;
-    width: 99%;
-    padding-left: 1%;
     outline-style: solid;
     outline-width: 2px;
     outline-color: #05386B;
@@ -109,7 +96,14 @@ footer {
     color: #05386B;
     font-size: 21px;
     margin-left: 120px;
-    margin-top: 30px;
+    margin-top: 45px;
+}
+#InstallationGuide{
+    position: absolute;
+    color: #05386B;
+    font-size: 21px;
+    margin-left: 30px;
+    margin-top: 100px;
 }
 
 /*Стили для ссылок*/
@@ -117,37 +111,37 @@ footer {
     position: absolute;
     font-size: 21px;
     margin-left: 30px;
-    margin-top: 125px;
+    margin-top: 230px;
 }
 
 #SDK6-0{
     position: absolute;
     font-size: 21px;
     margin-left: 30px;
-    margin-top: 155px;
+    margin-top: 260px;
 }
 #SDK5-0{
     position: absolute;
     font-size: 21px;
-    margin-left: 30px;
-    margin-top: 185px;
+    margin-left: 120px;
+    margin-top: 260px;
 }#SDK3-1{
     position: absolute;
     font-size: 21px;
-    margin-left: 30px;
-    margin-top: 215px;
+    margin-left: 210px;
+    margin-top: 260px;
 }
 
 /*Стили для кнопок*/
 #DownloadTextPad{
     position: absolute;
-    margin-top: 250px;
+    margin-top: 300px;
     margin-left: 30px;
     box-shadow: 2px 2px 5px #888;
 }
 #AllDownloads{
     position: absolute;
-    margin-top: 250px;
+    margin-top: 300px;
     margin-left: 235px;
     box-shadow: 2px 2px 5px #888;
 }
@@ -155,13 +149,13 @@ footer {
 /*Стили для скринов*/
 #ScreenTextPad1{
     position: absolute;
-    margin-top: 300px;
+    margin-top: 360px;
     margin-left: 30px;
     box-shadow: 2px 2px 5px #888;
 }
 #ScreenTextPad2{
     position: absolute;
-    margin-top: 615px;
+    margin-top: 690px;
     margin-left: 30px;
     box-shadow: 2px 2px 5px #888;
 }
