--- a/Downloads/adaptive.css
+++ b/Downloads/adaptive.css
@@ -35,14 +35,21 @@
 
 }
 
-@media only screen and (max-width: 1070px) {
-
-}
-
 @media only screen and (max-width: 1024px) {
 
 }
 
-@media only screen and (max-width: 980px) {
-    
+@media screen and (max-width: 837px) {
+    #Description{
+        margin-top: 30px;
+    }
+}
+
+@media only screen and (max-width: 680px) {
+    #MainPage{
+        left: 18%;
+    }
+    #DownloadsPage{
+        left: -18%;
+    }
 }
