--- a/Downloads/style.css
+++ b/Downloads/style.css
@@ -125,7 +125,7 @@ header {
 .Button{
     background-color: #23a87cf6;
     color: #EDF5E1;
-
+    position: relative;
     display: block;
 
     margin-top: 10px;
@@ -149,7 +149,6 @@ header {
 .Button:hover{
     color: #e8fccb;
     outline-color: #5CDB95;
-    transition: 0.3s;
     box-shadow: 0px 8px 5px #888;
 }
 .Button:active{
@@ -161,7 +160,7 @@ header {
     border-radius: 50%;
     animation: pulse 1s ease-out;
     transform: scale(0);
-    position: relative;
+    position: absolute;
 }
 @keyframes pulse{
     to{
