--- a/Downloads/style.css
+++ b/Downloads/style.css
@@ -149,17 +149,20 @@ header {
 }
 .Button:hover{
     color: #e8fccb;
-    outline-color: #5CDB95;
+    border: 2px solid #0c57a1;
     box-shadow: 0px 8px 5px #888;
 }
 .Button:active{
     color: #ffffff;
+    transition: 0.3s;
+    background-color: #0e7754f6;
+    border: 2px solid #0d4c4e;
 }
 
 .Pulse{
     background-color: #5d8f13;
     border-radius: 50%;
-    animation: pulse 1s ease-out;
+    animation: pulse 0.6s ease-out;
     transform: scale(0);
     position: absolute;
 }
@@ -173,10 +176,8 @@ header {
 
 
 .container img {
-
     transition: 0.4s;
 }
 .container img:hover {
     transform: scale(1.02);
-
 }
